--- a/website/static/website/css/video.css
+++ b/website/static/website/css/video.css
@@ -25,13 +25,18 @@
 	font-size: 15px;
 	word-wrap: break-word;
 	text-overflow: ellipsis;
-	padding-top: 10px;
+	padding-top: 5px;
+	margin-bottom: 0px;
+}
+
+.video-location {
+    margin-top: 0px;
+    color: #7F7F7F;
 }
 
 .video-links {
     	position: absolute;
 	font-size: 12px;
-	border-top: 1px solid #dddddd;
 	width:100%;
 	height: 20px;
 	bottom:0;
